# GD32H757_project_template

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
app/: CMakeLists.txt  app_config.h  app_debug.c  app_debug.h  app_init.c  app_init.h  app_task.c  app_task.h  app_version.h  main.c
assets/: README.txt
board/: CMakeLists.txt
board/gd32h757_eval/: CMakeLists.txt  board.c  board.h  board_adc.c  board_clock.c  board_clock.h  board_display.c  board_eeprom.c  board_eeprom.h  board_hw_version.c  board_hw_version.h  board_i2c.c  board_led.c  board_led.h  board_sdram.c  board_sensor.c  board_system.c  board_system.h  board_touch.c  board_touch.h  board_uart.c  board_uart.h
board/my_product_v1/: CMakeLists.txt  board.c  board.h  board_adc.c  board_adc.h  board_display.c  board_display.h  board_hw_version.c  board_i2c.c  board_i2c.h  board_key.c  board_key.h  board_led.c  board_pin.c  board_pin.h  board_sdram.h  board_sensor.c  board_sensor.h  board_system.c  board_system.h  board_touch.c  board_uart.c  board_uart.h
bsp/: CMakeLists.txt
bsp/adc/: bsp_adc.c  bsp_adc.h
bsp/i2c/: bsp_i2c.c  bsp_i2c.h
bsp/key/: bsp_key.c  bsp_key.h
bsp/led/: bsp_led.c  bsp_led.h
bsp/spi/: bsp_spi.c  bsp_spi.h
bsp/timer/: bsp_timer.c  bsp_timer.h
bsp/uart/: bsp_uart.c  bsp_uart.h
bsp/usb/: bsp_usb.c  bsp_usb.h
components/: CMakeLists.txt
components/cli/: cli.c  cli.h
components/common/: common.h
components/devices/eeprom/at24c02/: at24c02.c  at24c02.h
components/devices/sensors/gxht30/: gxht30.c  gxht30.h
components/hardware_version/: hardware_version.c  hardware_version.h
components/logger/: README  debug.c  debug.h  log.c  log.h
components/protocol/: protocol.c  protocol.h
components/ringbuffer/: ringbuffer.c  ringbuffer.h
components/shell/: shell.c  shell.h
components/storage/: storage.c  storage.h
config/: ffconf.h  (+5 more)
drivers/: CMakeLists.txt
drivers/cmsis/GD/GD32H7xx/Include/: gd32h7xx.h  system_gd32h7xx.h
drivers/cmsis/GD/GD32H7xx/Source/ARM/: startup_gd32h7xx.s
drivers/cmsis/GD/GD32H7xx/Source/GCC/: startup_gd32h7xx.S
drivers/gd32h7xx/Include/: gd32h7xx_adc.h  gd32h7xx_axiim.h  gd32h7xx_can.h  gd32h7xx_cau.h  gd32h7xx_cmp.h  gd32h7xx_cpdm.h  gd32h7xx_crc.h  gd32h7xx_ctc.h  gd32h7xx_dac.h  gd32h7xx_dbg.h  gd32h7xx_dci.h  gd32h7xx_dma.h  gd32h7xx_edout.h  gd32h7xx_efuse.h  gd32h7xx_enet.h  gd32h7xx_exmc.h  gd32h7xx_exti.h  gd32h7xx_fac.h  gd32h7xx_fmc.h  gd32h7xx_fwdgt.h  gd32h7xx_gpio.h  gd32h7xx_hau.h  gd32h7xx_hpdf.h  gd32h7xx_hwsem.h  gd32h7xx_i2c.h  gd32h7xx_ipa.h  gd32h7xx_lpdts.h  gd32h7xx_mdio.h  gd32h7xx_mdma.h  gd32h7xx_misc.h  gd32h7xx_ospi.h  gd32h7xx_ospim.h  gd32h7xx_pmu.h  gd32h7xx_rameccmu.h  gd32h7xx_rcu.h  gd32h7xx_rspdif.h  gd32h7xx_rtc.h  gd32h7xx_rtdec.h  gd32h7xx_sai.h  gd32h7xx_sdio.h  (+10 more)
drivers/gd32h7xx/Source/: gd32h7xx_adc.c  gd32h7xx_can.c  gd32h7xx_cau.c  gd32h7xx_cau_aes.c  gd32h7xx_cau_des.c  gd32h7xx_cau_tdes.c  gd32h7xx_cmp.c  gd32h7xx_cpdm.c  gd32h7xx_crc.c  gd32h7xx_ctc.c  gd32h7xx_dac.c  gd32h7xx_dbg.c  gd32h7xx_dci.c  gd32h7xx_dma.c  gd32h7xx_edout.c  gd32h7xx_efuse.c  gd32h7xx_enet.c  gd32h7xx_exmc.c  gd32h7xx_exti.c  gd32h7xx_fac.c  gd32h7xx_fmc.c  gd32h7xx_fwdgt.c  gd32h7xx_gpio.c  gd32h7xx_hau.c  gd32h7xx_hau_sha_md5.c  gd32h7xx_hpdf.c  gd32h7xx_hwsem.c  gd32h7xx_i2c.c  gd32h7xx_ipa.c  gd32h7xx_lpdts.c  gd32h7xx_mdio.c  gd32h7xx_mdma.c  gd32h7xx_misc.c  gd32h7xx_ospi.c  gd32h7xx_ospim.c  gd32h7xx_pmu.c  gd32h7xx_rameccmu.c  gd32h7xx_rcu.c  gd32h7xx_rspdif.c  gd32h7xx_rtc.c  (+13 more)
drivers/gd32h7xx_usbhs/Include/: drv_usb_core.h  drv_usb_dev.h  drv_usb_host.h  drv_usb_hw.h  drv_usb_regs.h  drv_usbd_int.h  drv_usbh_int.h
drivers/gd32h7xx_usbhs/Source/: drv_usb_core.c  drv_usb_dev.c  drv_usb_host.c  drv_usbd_int.c  drv_usbh_int.c
middleware/: CMakeLists.txt
middleware/cjson/: CMakeLists.txt  cjson_stub.c  cjson_stub.h
middleware/fatfs/: CMakeLists.txt  fatfs_stub.c  fatfs_stub.h
middleware/freertos/: CMakeLists.txt  freertos_kernel.c  freertos_kernel.h
middleware/log/: CMakeLists.txt  easylogger_port.c  log.c  log.h
middleware/lvgl/: CMakeLists.txt  lvgl_port.c  lvgl_port.h
middleware/lvgl/lvgl/: lvgl.h  lvgl_stub.c
middleware/lvgl/port/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
middleware/lwip/: CMakeLists.txt  lwip_port.c  lwip_port.h
middleware/micropython/: CMakeLists.txt  micropython_port.c  micropython_port.h
middleware/usb_common/: CMakeLists.txt
middleware/usb_common/gd32h7xx_usbhs_ustd/class/cdc/: usb_cdc.h
middleware/usb_common/gd32h7xx_usbhs_ustd/class/hid/: usb_hid.h
middleware/usb_common/gd32h7xx_usbhs_ustd/class/msc/: msc_bbb.h  msc_scsi.h  usb_msc.h
middleware/usb_common/gd32h7xx_usbhs_ustd/common/: usb_ch9_std.h
middleware/usb_device/: CMakeLists.txt  usb_device.c  usb_device.h
middleware/usb_device/gd32h7xx_usbhs_device/core/Include/: usbd_core.h  usbd_enum.h  usbd_transc.h
middleware/usb_device/gd32h7xx_usbhs_device/core/Source/: usbd_core.c  usbd_enum.c  usbd_transc.c
middleware/usb_host/: CMakeLists.txt  usb_host.c  usb_host.h
middleware/usb_host/gd32h7xx_usbhs_host/core/Include/: usbh_core.h  usbh_enum.h  usbh_pipe.h  usbh_transc.h
middleware/usb_host/gd32h7xx_usbhs_host/core/Source/: usbh_core.c  usbh_enum.c  usbh_pipe.c  usbh_transc.c
osal/: CMakeLists.txt  osal.c  osal.h  osal_baremetal.c  osal_baremetal.h  osal_freertos.c  osal_freertos.h
services/: CMakeLists.txt
services/app_event/: app_event.c  app_event.h
services/comm_service/: comm_service.c  comm_service.h
services/display_service/: display_service.c  display_service.h
services/display_service/ui/: ui.c  ui.h
services/display_service/ui/screens/: ui_home.c  ui_home.h  ui_settings.c  ui_settings.h
services/display_service/ui/widgets/: ui_status_bar.c  ui_status_bar.h
services/key_service/: key_service.c  key_service.h
services/sensor_service/: sensor_service.c  sensor_service.h
services/storage_service/: storage_service.c  storage_service.h
services/upgrade_service/: upgrade_service.c  upgrade_service.h
(+77 files in other folders)
